--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,15 +8,15 @@ pool:
   vmImage: 'windows-2019'
 strategy:
   matrix:
-    Python35:
-      python.version: '3.5'
-      TOXENV: py35
+    #Python35:
+      #python.version: '3.5'
+      #TOXENV: py35
     Python36:
       python.version: '3.6'
       TOXENV: py36
-    Python37:
-      python.version: '3.7'
-      TOXENV: py37
+    #Python37:
+      #python.version: '3.7'
+      #TOXENV: py37
 
 steps:
 - task: UsePythonVersion@0
@@ -26,5 +26,5 @@ steps:
 
 - script: |
     pip install -U tox twine wheel codecov
-    tox
+    tox -- tests/test_request_left.py::TestCatching
   displayName: 'Run test suite'
